# jean

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.server  Dockerfile.server-runtime  README.md  build-jean.sh  eslint.config.js  index.html  jean.json  package.json
docs/: headless-server.md
jean-core/: Cargo.toml
jean-core/src/: jean_mcp_config.rs  jean_mcp_core.rs  jean_mcp_socket.rs  jean_mcp_stdio.rs  lib.rs  runtime.rs  version.rs
jean-core/src/ai_pipeline/: commands.rs  config.rs  mod.rs
jean-core/src/auto_fix/: scheduler.rs
jean-core/src/background_tasks/: commands.rs  mod.rs
jean-core/src/chat/: claude.rs  coalesce.rs  codex.rs  codex_server.rs  commands.rs  context_instructions.rs  grok.rs  handoff.rs  kimi.rs  mod.rs  naming.rs  native_history.rs  opencode.rs  pi.rs  registry.rs  run_log.rs  storage.rs  tail.rs  types.rs  wakeup.rs
jean-core/src/claude_cli/: commands.rs  config.rs  mcp.rs  mod.rs
jean-core/src/cli_update/: mod.rs
jean-core/src/coderabbit_cli/: commands.rs  config.rs
jean-core/src/codex_cli/: commands.rs  config.rs  mod.rs
jean-core/src/commandcode_cli/: commands.rs  config.rs
jean-core/src/cursor_cli/: commands.rs  config.rs
jean-core/src/gh_cli/: commands.rs  config.rs
jean-core/src/grok_cli/: commands.rs  config.rs  mod.rs
jean-core/src/http_server/: assets.rs  auth.rs  dispatch.rs  mod.rs  server.rs  websocket.rs
jean-core/src/jenkins/: client.rs  commands.rs  freshness.rs  gh_checks.rs  mod.rs  parse.rs  poller.rs  types.rs
jean-core/src/kimi_cli/: commands.rs  config.rs  mcp.rs  mod.rs
(+647 files in other folders)
